wrote dirty hacks to make open images work training possible

--- a/demo/inference_demo.ipynb
+++ b/demo/inference_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "config_file = '../configs/hrnet/cascade_rcnn_hrnetv2p_w32_20e.py'\n",
+    "#config_file = '../configs/hrnet/fcos_hrnetv2p_w32_gn_1x_1gpu_oi.py'\n",
     "# download the checkpoint from model zoo and put it in `checkpoints/`\n",
-    "checkpoint_file = '../checkpoints/cascade_rcnn_hrnetv2p_w32_20e_20190522-55bec4ee.pth'"
+    "checkpoint_file = '../checkpoints/cascade_rcnn_hrnetv2p_w32_20e_20190522-55bec4ee.pth'\n",
+    "#checkpoint_file = '../work_dirs/fcos_hrnetv2p_w32_gn_1x_1gpu_oi/latest.pth'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
